# sh2dis

./: pyproject.toml
Evo8_Stock_ECU_chunks/: Evo8_Stock_ECU.hex.txt  chunk_10_of_10.txt  chunk_1_of_10.txt  chunk_2_of_10.txt  chunk_3_of_10.txt  chunk_4_of_10.txt  chunk_5_of_10.txt  chunk_6_of_10.txt  chunk_7_of_10.txt  chunk_8_of_10.txt  chunk_9_of_10.txt
src/sh2dis/: __init__.py  __main__.py  segment.py  sh2.py
