[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sh2dis"
authors = [
    {name = "Ed Marshall", email = "esm@logic.net"},
]
license = {file = "COPYING3"}
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU General Public License (GPL)',
  'Natural Language :: English',
  'Operating System :: POSIX',
  'Programming Language :: Python :: 3',
  'Topic :: Software Development :: Disassemblers',
  'Topic :: Software Development :: Embedded Systems',
]
dynamic = [
    "version",
]

[project.urls]
Homepage = "https://github.com/logic/sh2dis"

[project.scripts]
sh2dis = "sh2dis.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "sh2dis.__version__"}
